--- a/portfolio.html
+++ b/portfolio.html
@@ -35,7 +35,9 @@
               <a href="index.html" class="site-nav-link link">Studio</a>
             </li>
             <li class="site-nav-items">
-              <a href="portfolio.html" class="site-nav-link link current">Portfolio</a>
+              <a href="portfolio.html" class="site-nav-link link current"
+                >Portfolio</a
+              >
             </li>
             <li class="site-nav-items">
               <a href="" class="site-nav-link link">Contacts</a>
@@ -86,11 +88,18 @@
           <ul class="portfolio-list list">
             <li class="portfolio-item">
               <a href="" class="portfolio-item-link link list">
-                <img
-                  src="./images/portfolio-img1.jpg"
-                  alt="interface concept"
-                  width="360"
-                />
+                <div class="portfolio-top-wrap">
+                  <img
+                    src="./images/portfolio-img1.jpg"
+                    alt="interface concept"
+                    width="360"
+                  />
+                  <p class="portfolio-top-text">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
                 <div class="portfolio-text-container">
                   <h3 class="portfolio-subtitle subtitle">
                     Banking App Interface Concept
@@ -101,11 +110,18 @@
             </li>
             <li class="portfolio-item">
               <a href="" class="portfolio-item-link link list">
-                <img
-                  src="./images/portfolio-img2.jpg"
-                  alt="payment by smartphone"
-                  width="360"
-                />
+                <div class="portfolio-top-wrap">
+                  <img
+                    src="./images/portfolio-img2.jpg"
+                    alt="payment by smartphone"
+                    width="360"
+                  />
+                  <p class="portfolio-top-text">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
                 <div class="portfolio-text-container">
                   <h3 class="portfolio-subtitle">Cashless Payment</h3>
                   <p class="portfolio-text">Marketing</p>
@@ -114,11 +130,18 @@
             </li>
             <li class="portfolio-item">
               <a href="" class="portfolio-item-link link list">
-                <img
-                  src="./images/portfolio-img3.jpg"
-                  alt="example of the application on a laptop and smartphone"
-                  width="360"
-                />
+                <div class="portfolio-top-wrap">
+                  <img
+                    src="./images/portfolio-img3.jpg"
+                    alt="example of the application on a laptop and smartphone"
+                    width="360"
+                  />
+                  <p class="portfolio-top-text">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
                 <div class="portfolio-text-container">
                   <h3 class="portfolio-subtitle">Meditaion App</h3>
                   <p class="portfolio-text">App</p>
@@ -127,11 +150,18 @@
             </li>
             <li class="portfolio-item">
               <a href="" class="portfolio-item-link link list">
-                <img
-                  src="./images/portfolio-img4.jpg"
-                  alt="the driver of the car looks at the smartphone"
-                  width="360"
-                />
+                <div class="portfolio-top-wrap">
+                  <img
+                    src="./images/portfolio-img4.jpg"
+                    alt="the driver of the car looks at the smartphone"
+                    width="360"
+                  />
+                  <p class="portfolio-top-text">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
                 <div class="portfolio-text-container">
                   <h3 class="portfolio-subtitle">Taxi Service</h3>
                   <p class="portfolio-text">Marketing</p>
@@ -140,11 +170,18 @@
             </li>
             <li class="portfolio-item">
               <a href="" class="portfolio-item-link link list">
-                <img
-                  src="./images/portfolio-img5.jpg"
-                  alt="illustrations for smartphone"
-                  width="360"
-                />
+                <div class="portfolio-top-wrap">
+                  <img
+                    src="./images/portfolio-img5.jpg"
+                    alt="illustrations for smartphone"
+                    width="360"
+                  />
+                  <p class="portfolio-top-text">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
                 <div class="portfolio-text-container">
                   <h3 class="portfolio-subtitle">Screen Illustrations</h3>
                   <p class="portfolio-text">Design</p>
@@ -153,11 +190,18 @@
             </li>
             <li class="portfolio-item">
               <a href="" class="portfolio-item-link link list">
-                <img
-                  src="./images/portfolio-img6.jpg"
-                  alt="smiling girl talking on the phone"
-                  width="360"
-                />
+                <div class="portfolio-top-wrap">
+                  <img
+                    src="./images/portfolio-img6.jpg"
+                    alt="smiling girl talking on the phone"
+                    width="360"
+                  />
+                  <p class="portfolio-top-text">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
                 <div class="portfolio-text-container">
                   <h3 class="portfolio-subtitle">Online Courses</h3>
                   <p class="portfolio-text">Marketing</p>
@@ -166,11 +210,18 @@
             </li>
             <li class="portfolio-item">
               <a href="" class="portfolio-item-link link list">
-                <img
-                  src="./images/portfolio-img7.jpg"
-                  alt="Instagram stories"
-                  width="360"
-                />
+                <div class="portfolio-top-wrap">
+                  <img
+                    src="./images/portfolio-img7.jpg"
+                    alt="Instagram stories"
+                    width="360"
+                  />
+                  <p class="portfolio-top-text">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
                 <div class="portfolio-text-container">
                   <h3 class="portfolio-subtitle">Instagram Stories Concept</h3>
                   <p class="portfolio-text">Design</p>
@@ -179,11 +230,18 @@
             </li>
             <li class="portfolio-item">
               <a href="" class="portfolio-item-link link list">
-                <img
-                  src="./images/portfolio-img8.jpg"
-                  alt="a girl carrying groceries"
-                  width="360"
-                />
+                <div class="portfolio-top-wrap">
+                  <img
+                    src="./images/portfolio-img8.jpg"
+                    alt="a girl carrying groceries"
+                    width="360"
+                  />
+                  <p class="portfolio-top-text">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
                 <div class="portfolio-text-container">
                   <h3 class="portfolio-subtitle">Organic Food</h3>
                   <p class="portfolio-text">Web Site</p>
@@ -192,11 +250,18 @@
             </li>
             <li class="portfolio-item">
               <a href="" class="portfolio-item-link link list">
-                <img
-                  src="./images/portfolio-img9.jpg"
-                  alt="barista preparing coffee"
-                  width="360"
-                />
+                <div class="portfolio-top-wrap">
+                  <img
+                    src="./images/portfolio-img9.jpg"
+                    alt="barista preparing coffee"
+                    width="360"
+                  />
+                  <p class="portfolio-top-text">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
                 <div class="portfolio-text-container">
                   <h3 class="portfolio-subtitle">Fresh Coffee</h3>
                   <p class="portfolio-text">Web Site</p>
