--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       <div class="container">
         <nav class="header-navigation">
           <a href="/" class="header-logo-beginning link"
-            >Web<span class="header-logo-end link ">Studio</span></a
+            >Web<span class="header-logo-end link">Studio</span></a
           >
           <ul class="site-nav list">
             <li class="site-nav-items">
@@ -66,7 +66,9 @@
       <section class="hero">
         <div class="container">
           <h1 class="main-title">Effective Solutions for Your Business</h1>
-          <button type="button" class="hero-btn">Order Service</button>
+          <button type="button" class="hero-btn" data-modal-open>
+            Order Service
+          </button>
         </div>
       </section>
 
@@ -431,5 +433,15 @@
         </div>
       </div>
     </footer>
+    <div class="backdrop is-hidden" data-modal>
+      <div class="modal">
+        <button type="button" class="modal-close-btn" data-modal-close>
+          <svg class="modal-close-icon" width="8" height="8">
+            <use href="./images/icon.svg#icon-close-black"></use>
+          </svg>
+        </button>
+      </div>
+    </div>
+    <script src="./js/modal.js"></script>
   </body>
 </html>
